--- a/src/styles/components/grid.css
+++ b/src/styles/components/grid.css
@@ -17,13 +17,21 @@
     border: 1px solid #000000;
     /* background-color: #D9D9D9; */
   }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     .grid-container {
       width: 25em;
       height:25em;
       align-self: center;
       justify-self: center;
-      grid-row: span 3;
-      margin: 0 1em;
+      /* grid-row: span 3; */
+      /* margin: 0 1em; */
+      margin: 0;
     }
+}
+
+@media screen and (max-width: 380px) {
+  .grid-container{
+    width: 15em;
+    height: 15em;
+  }
 }
